# classy

./: .gitignore  Cargo.toml  Makefile  TODO.md  justfile  rustfmt.toml
.metals/: metals.lock.db  metals.mv.db
classy_sexpr_proc_macro/: Cargo.toml
classy_sexpr_proc_macro/src/: lib.rs
classy_sexpr_proc_macro/tests/: sexpr_macro.rs
classyclib/: Cargo.toml
classyclib/src/: TODO.md  compile.rs  discard_values.rs  id_provider.rs  knowledge.rs  lib.rs  main.rs  scope.rs  session.rs
classyclib/src/ast_passes/: assign_ast_ids.rs  assign_expr_id.rs  expand_namespace.rs  func_to_struct_literal.rs  func_to_struct_literal_db.rs  gather_runtime_functions.rs  implicit_forall.rs  import_prelude.rs  mod.rs  move_const_init.rs  order_functions.rs  promote_local_types.rs  resolve_names.rs  resolve_struct_literal_names.rs  verify_lvalues.rs
classyclib/src/code/: constant_pool.rs  debug.rs  interner.rs
classyclib/src/emitter/: backpatch.rs  ir.rs
classyclib/src/ir/: emitter.rs  instr.rs  mod.rs
classyclib/src/package/: mod.rs
classyclib/src/syntax/: parser.rs
classyclib/src/syntax/ast/: visitor.rs
classyclib/src/typecheck/: add_types.rs  alias_resolver.rs  assign_meth_blocks_base_types.rs  ast_to_type.rs  constraints.rs  constrait_solver.rs  fix_fresh.rs  inference.rs  instance.rs  mod.rs  scope.rs  type.rs  type_context.rs  types.rs
classyclib/src/util/: composition.rs  mod.rs
classyclib/src/v2/: compile.rs  constraint_generation.rs  constraint_solver.rs  instance.rs  knowledge.rs  method_resolver.rs  mod.rs  name_scope.rs  rast.rs  render.rs  ty.rs  types.rs
(+145 files in other folders)
