[package]
name = "classyclib"
version = "0.1.0"
edition = "2021"

[dependencies]
bitvec = "1.0.1"
colored = "2.0.0"
lazy_static = "1.4.0"
logos = "0.12.1"
serde = { version = "1.0.163", features = ["serde_derive"] }
serde_json = "1.0.96"
similar-asserts = "1.4.2"
thiserror = "1.0.37"
classy_syntax = { path = "../classy_syntax" }
classy_sexpr = { path = "../classy_sexpr" }
classy_sexpr_proc_macro = { path = "../classy_sexpr_proc_macro" }
classy_blackboard = { path = "../classy_blackboard" }
maud = "0.26.0"
